force-app/main/default/objects/df_122_organisation_arv__c/df_122_organisation_arv__c.object-meta.xml
<CustomObject>
    <label>Organisation</label>
    <nameField>
        <label>Organisation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organisations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>