force-app/main/default/objects/df_122_organisation_arv__c/fields/arvsprocent_organisation__c.field-meta.xml
<CustomField>
    <fullName>arvsprocent_organisation__c</fullName>
    <label>Arvsprocent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>