force-app/main/default/objects/df_122_organisation_arv__c/fields/fretagets_namn_arv__c.field-meta.xml
<CustomField>
    <fullName>fretagets_namn_arv__c</fullName>
    <label>Företagets namn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>