force-app/main/default/objects/df_122_organisation_arv__c/fields/organisationsnummer_arv__c.field-meta.xml
<CustomField>
    <fullName>organisationsnummer_arv__c</fullName>
    <label>Organisationsnummer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>